# tut_research_ros_pkg

./: .gitignore  README.md  ros commands.docx
LOL/laser_slam/laser_slam/: CMakeLists.txt
PCL_Test/compare_pcd/: CMakeLists.txt  com_pcd.cpp
PCL_Test/corr_multi_wall/: CMakeLists.txt
PCL_Test/corr_multi_wall/include/: graph_optimization.hpp  pre_processing.hpp
PCL_Test/corr_multi_wall/include/g2o/: edge_se3_ground_plane.hpp  edge_se3_wall_plane2.hpp  edge_se3_wall_plane4.hpp
PCL_Test/corr_multi_wall/src/: data_corr.cpp  graph_optimization.cpp  pre_processing.cpp
PCL_Test/initial_thres/: CMakeLists.txt  init_thres.cpp
PCL_Test/ndt_trans/: CMakeLists.txt  ndt_trans.cpp
PCL_Test/pcd_readmerge/: CMakeLists.txt  pcd_readmerge.cpp
PCL_Test/plane_fit/: CMakeLists.txt  plane_fit.cpp
PointCloudProcessing/crop_box_filter/: CMakeLists.txt  config.rviz  package.xml
PointCloudProcessing/crop_box_filter/src/: apply_crop_box_filter.cpp
PointCloudProcessing/pointcloud_registration/: CMakeLists.txt  multiway_registration.py  package.xml  readme.md  rviz.rviz
PointCloudProcessing/pointcloud_registration/kobelco_exp_2024/: pose.py
PointCloudProcessing/pointcloud_registration/launch/: sequential_registration.launch
PointCloudProcessing/pointcloud_registration/src/: sequential_registration (copy).cpp  sequential_registration.cpp
crane/crane_simulator/gpop/: CMakeLists.txt
crane/crane_simulator/gpop/src/: Pie.cpp  (+1 more)
crane/k_crane/k_crane_control/: README.md  package.xml
crane/pointcloud_integrator/: CMakeLists.txt  Readme.md
crane/pointcloud_integrator/camparam/: camparam.yaml
crane/pointcloud_integrator/include/: KeyFrameDisplay.h  KeyFrameGraphDisplay.h  voxel_grid_covariance_omp_impl.hpp
crane/pointcloud_integrator/msg/: camdepthMsg.msg  meshMsg.msg  scanMsg.msg
crane/pointcloud_integrator/src/: KeyFrameDisplay.cpp  main_viewer.cpp  settings.cpp
crane_simulator/fanda/test/: CMakeLists.txt  test_csv.cpp  test_file.cpp  test_udp_server.cpp  test_zip.cpp
crane_simulator/gpop/test/: CMakeLists.txt  test0.cpp  test1.cpp  test14.cpp  test16.cpp  test17.cpp  test18.cpp  test21.cpp  test23.cpp  test3.cpp  test9.cpp
latest_crane/crane_simulator/fanda/: CMakeLists.txt
latest_crane/k_crane/k_crane_control/: CMakeLists.txt  README.md  package.xml
latest_crane/k_crane/k_crane_gazebo/: package.xml
latest_crane/laser_to_pcl/: CMakeLists.txt  package.xml
latest_crane/laser_to_pcl/launch/: frames.gv  laser_scan_combine_kobelco.launch  laser_scan_start_crane_structural_info.launch  laser_scan_start_exp.launch  laser_scan_start_exp_real_crane_bag.launch  laser_scan_start_optimize.launch  point_cloud_start.launch  pointcloud2pcd.launch  pointcloud_to_laserscan.launch
latest_crane/laser_to_pcl/rviz/: exp.rviz  exp_bag.rviz
latest_crane/laser_to_pcl/src/: CropBoxFilter.py  LaserAssembler.py  LaserAssembler_crane_structural_info.py  LaserAssembler_crane_structure.py  LaserAssembler_exp.py  LaserAssembler_exp_real_crane_bag.py  LaserAssembler_loam.py  LaserAssembler_vins.py  cam_imu_time_synchronizer.py  combine_tf_frames_and_publish_odom_of_crane_structural.py  combine_tf_frames_for_tf2traj.py  compare_upper_imu_rotation_gazebo.py  frames.gv  gazebo_link_to_trajectory.py  hdl_LaserAssembler.py  hdl_laser2pointcloud.py  hdl_odm_pointcloud_publisher.py  hdl_tf_listener_odm_publisher.py  hdl_time_synchronizer.py  imgui.ini  laser2pointcloud2.cpp  laser2pointcloud_imu.py  laser2pointcloud_loam (copy).cpp  laser2pointcloud_loam.cpp  laser2pointcloud_loam_py.py  laser_scan_range_points_checker.py  laser_scan_transformer_in_world_frame.py  mm.py  move_crane_boom_pitch.py  move_crane_boom_pitch_loam (copy).py  move_crane_boom_two_motion.py  move_crane_boom_two_motion_loam.py  move_crane_boom_yaw.py  pointcloud_to_pcd.cpp  rotate_start.py  rotate_start_loam.py  rotate_start_vins.py  tf2_broadcaster_by_imu_crane_structure.py  tf2_broadcaster_by_imu_crane_structure_no_imu.py  tf2_broadcaster_by_imu_exp_crane3_no_imu.py  (+24 more)
latest_crane/laser_to_pcl/src_old/: LaserAssembler2.py  LaserAssembler_optimize_only.py
latest_crane/map_optimization/: CMakeLists.txt  README.md  package.xml  pose_graph_optimization_guide.md
latest_crane/map_optimization/include/: common_global.hpp  pre_processing.hpp
latest_crane/map_optimization/launch/: PointCloudIntersection.launch  data_corr.launch  plane_extraction.launch  plane_extraction_using_selected_roi.launch
latest_crane/map_optimization/old/: PointCloudIntersection.cpp  plane_extraction_using_selected_roi.cpp
latest_crane/map_optimization/plot/: before_opti_graph.g2o  plot.py
latest_crane/map_optimization/src/: data_corr.cpp  data_corr_troubleshoot.cpp  graph_optimization.cpp  key_index.cpp  plane_extraction.cpp  plane_extraction_bacckup222.cpp  plane_extraction_with_out_clustering.cpp  ploting_cloud_visualization_troubleshooting.cpp  pre_processing.cpp
ld_lrs3611/: CMakeLists.txt  README.md  package.xml
ld_lrs3611/include/LD_LRS3611/: LD_LRS3611.h  lms_buffer.h
ld_lrs3611/launch/: LD_LRS3611.launch
ld_lrs3611/src/: LD_LRS3611.cpp  LD_LRS3611_node.cpp
my_crane_imu_lidar/ridar_scan/: CMakeLists.txt  package.xml
my_crane_imu_lidar/ridar_scan/launch/: k_crane_simulation_collision_warning.launch  live_scan.launch  model_loader.launch  simulation_scan_with_imu_lidar.launch
my_crane_imu_lidar/ridar_scan/pcd_read/: pcd_read.cpp  pcd_write.cpp  read.md
my_crane_imu_lidar/ridar_scan/rviz/: live_scan.rviz
my_crane_imu_lidar/ridar_scan/scans/: .~lock.test_2021-2-20_20-1-8.pcd#
open3d_slam/ros/open3d_slam_msgs/: CMakeLists.txt  package.xml
ptu_d47/flir_ptu_driver/: CMakeLists.txt  package.xml
ptu_d47/flir_ptu_driver/launch/: ptu.launch
ptu_d47/flir_ptu_driver/src/: driver.cpp  node.cpp
ptu_d47/flir_ptu_driver/srv/: initCommand.srv  sendCommand.srv
sky_detection/sky_detector/: CMakeLists.txt  package.xml
sky_detection/sky_detector/src/: sky_detector.cpp  sky_detector.py  sky_detector_ros.cpp  sky_detector_ros.py
vins/open_vins/ov_core/: CMakeLists.txt
vins/vins_mono/feature_tracker/: CMakeLists.txt  package.xml
(+6528 files in other folders)
