cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_FLAGS "-Wall -g")

add_executable(test0 test0.cpp)	
add_executable(test1 test1.cpp) 	
add_executable(test2 test2.cpp) 	
add_executable(test3 test3.cpp) 	
add_executable(test4 test4.cpp) 	
add_executable(test5 test5.cpp) 	
add_executable(test6 test6.cpp) 	
add_executable(test7 test7.cpp) 	
add_executable(test8 test8.cpp) 	
add_executable(test9 test9.cpp) 	
add_executable(test10 test10.cpp)
add_executable(test11 test11.cpp)
add_executable(test12 test12.cpp)
add_executable(test13 test13.cpp)
add_executable(test14 test14.cpp)
add_executable(test15 test15.cpp)
add_executable(test16 test16.cpp)
add_executable(test17 test17.cpp)
add_executable(test18 test18.cpp)
add_executable(test19 test19.cpp)
add_executable(test20 test20.cpp)
add_executable(test21 test21.cpp)
add_executable(test22 test22.cpp)
add_executable(test23 test23.cpp)
add_executable(test24 test24.cpp)

target_link_libraries(test0	 Gpop)
target_link_libraries(test1	 Gpop)   
target_link_libraries(test2	 Gpop)   
target_link_libraries(test3	 Gpop)   
target_link_libraries(test4	 Gpop)   
target_link_libraries(test5	 Gpop)   
target_link_libraries(test6	 Gpop)   
target_link_libraries(test7	 Gpop)   
target_link_libraries(test8	 Gpop)   
target_link_libraries(test9	 Gpop)   
target_link_libraries(test10 Gpop)
target_link_libraries(test11 Gpop)
target_link_libraries(test12 Gpop)
target_link_libraries(test13 Gpop)
target_link_libraries(test14 Gpop)
target_link_libraries(test15 Gpop)
target_link_libraries(test16 Gpop)
target_link_libraries(test17 Gpop)
target_link_libraries(test18 Gpop)
target_link_libraries(test19 Gpop)
target_link_libraries(test20 Gpop)
target_link_libraries(test21 Gpop)
target_link_libraries(test22 Gpop)
target_link_libraries(test23 Gpop)
target_link_libraries(test24 Gpop)

